Test for fixing checkmark color on iOS

--- a/src/components/PersonalInfoCheckbox.css
+++ b/src/components/PersonalInfoCheckbox.css
@@ -32,7 +32,7 @@
 
 .checkbox:checked::after {
   content: '✔';
-  color: var(--color-white);
+  color: white;
 }
 
 .checkbox:disabled {
